--- a/tensorflow/lite/micro/examples/micro_speech/train/train_micro_speech_model.ipynb
+++ b/tensorflow/lite/micro/examples/micro_speech/train/train_micro_speech_model.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/EdwinDen/Community-Marketplace-/blob/main/tensorflow/lite/micro/examples/micro_speech/train/train_micro_speech_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "pO4-CY_TCZZS"
       },
       "source": [
@@ -44,20 +54,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ludfxbNIaegy",
-        "outputId": "77f2a3f2-c687-4884-b411-29f4734ed81a"
+        "outputId": "1d89051f-d794-45c6-c5f3-9a8b22433ed8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training these words: on,off\n",
+            "Training these words: off,on\n",
             "Training steps in each stage: 15000,3000\n",
             "Learning rate in each stage: 0.001,0.0001\n",
             "Total number of training steps: 18000\n"
@@ -69,7 +79,7 @@
         "# The options are: yes,no,up,down,left,right,on,off,stop,go\n",
         "# All the other words will be used to train an \"unknown\" label and silent\n",
         "# audio data with no spoken words will be used to train a \"silence\" label.\n",
-        "WANTED_WORDS = \"on,off\"\n",
+        "WANTED_WORDS = \"off,on\"\n",
         "\n",
         "# The number of steps and learning rates can be specified as comma-separated\n",
         "# lists to define the rate at each stage. For example,\n",
@@ -552,7 +562,8 @@
     "colab": {
       "name": "train_micro_speech_model.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.9.13 ('venv': venv)",
